# api/cmd/api/roles.go
@@ -3,21 +3,21 @@ package main
 
 import "check-in/api/internal/models"
 
-var allRoles = []models.Roles{
+var allRoles = []models.Role{
 	models.AdminRole,
 	models.ManagerRole,
 	models.DefaultRole,
 }
 
-var adminRole = []models.Roles{
+var adminRole = []models.Role{
 	models.AdminRole,
 }
 
-var defaultRole = []models.Roles{
+var defaultRole = []models.Role{
 	models.DefaultRole,
 }
 
-var managerAndAdminRole = []models.Roles{
+var managerAndAdminRole = []models.Role{
 	models.ManagerRole,
 	models.AdminRole,
 }
